--- a/auctioneer/auctioneer-auction-details-upcoming-sms-sent.html
+++ b/auctioneer/auctioneer-auction-details-upcoming-sms-sent.html
@@ -61,7 +61,7 @@
         <div class="col-lg-9 col-xl-7 mb-5 mb-xl-0">
           <a href="#!" class="see-all see-all-back">
             <img src="../img/arrow-left.svg" alt="" class="align-middle">
-            <span class="d-inline-block pl-1 align-middle">Back to screen semantic name</span>
+            <span class="d-inline-block pl-1 align-middle">Back to your auctions</span>
           </a>
           <div class="fz-32 font-weight-bold lh-12 mt-1 pb-4">Auction for residential plot No. 13, Block 1 / A, Plan 26/816, Al-Aziziyah neighborhood</div>
 
@@ -199,7 +199,7 @@
               <button class="btn btn-primary btn-sign btn-edit btn-block d-sm-inline-block ml-0" data-toggle="modal" data-target="#modal">SMS campaign details</button>
             </div>
             <div class="col-sm-auto text-center mt-3 mt-sm-0">
-              <a href="#!" class="see-all see-all-2">Request additional messages</a>
+              <a href="#!" class="see-all see-all-2 fz-16">Request additional messages</a>
             </div>
           </div>
         </div>
