--- a/auctioneer/auctioneer-auction-bids.html
+++ b/auctioneer/auctioneer-auction-bids.html
@@ -92,8 +92,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col-sm">Ended 10/02/2021</div>
-                <div class="col-sm-auto">
+                <div class="col-sm text-gray-3">Ended 10/02/2021</div>
+                <div class="col-sm-auto text-gray">
                   <div>Winning bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
