--- a/auctioneer/auctioneer-edit-auction-draft.html
+++ b/auctioneer/auctioneer-edit-auction-draft.html
@@ -58,136 +58,224 @@
   <section class="section pt-5 mb-3 bg-white">
     <div class="container">
       <div class="row row-3 justify-content-center">
-        <div class="col-lg-8 mb-5 mb-lg-0">
+        <div class="col-lg-9 col-xl-7 mb-5 mb-xl-0">
           <a href="#!" class="see-all see-all-back">
             <img src="../img/arrow-left.svg" alt="" class="align-middle">
-            <span class="d-inline-block pl-1 align-middle">Back to auction </span>
+            <span class="d-inline-block pl-1 align-middle">Back to your auctions</span>
           </a>
-          <div class="fz-32 font-weight-bold lh-12 mt-1 pb-4">Auction Bids</div>
-          <div class="row">
-            <div class="col mb-2 mb-md-0">
-              <h3 class="mb-0">Congratulations! You have a winning bid!</h3>
-            </div>
-            <div class="col-md-auto">
-              <a href="#!" class="see-all see-all-2">
-                <span class="d-inline-block pr-1 fz-16 align-middle">Export bidder info as .csv</span>
-                <img src="../img/arrow-down.svg" alt="" class="align-middle">
-              </a>
+          <div class="fz-32 font-weight-bold lh-12 mt-1 pb-4">General information</div>
+
+          <div class="bg-img bg-img-460 bg-img-radius mt-2" style="background-image: url(../img/img56.png)">
+          </div>
+          <div class="radius-bottom-8 mb-4">
+            <div class="row row-4 pt-1">
+              <div class="col-6 col-sm-3 mb-1 mb-sm-0">
+                <div class="bg-img bg-img-112" style="background-image: url(../img/img19.png)">
+                </div>
+              </div>
+              <div class="col-6 col-sm-3 mb-1 mb-sm-0">
+                <div class="bg-img bg-img-112 embed-responsive embed-responsive-16by9" style="background-image: url(../img/img20.png)">
+                </div>
+              </div>
+              <div class="col-6 col-sm-3">
+                <div class="bg-img bg-img-112" style="background-image: url(../img/img21.png)">
+                </div>
+              </div>
+              <div class="col-6 col-sm-3">
+                <div class="bg-img bg-img-112" style="background-image: url(../img/img22.png)">
+                </div>
+              </div>
             </div>
           </div>
-          <div class="text-gray mt-2 py-1">The winning bid holder’s information is available to you below. <br> Have issues collecting? <a href="#!" class="text-blue">Read how to collect your payment here.</a></div>
-          <form id="form" class="py-3" novalidate="novalidate">
+          <form id="form">
+            <div class="form-group">
+              <div class="d-flex flex-column-reverse">
+                <input type="text" class="form-control" placeholder="Write something great" id="count-50" maxlength="50" name="description2">
+                <div class="row row-1 mb-2 align-items-center">
+                  <div class="col">Property title<span class="text-red">*</span>
+                  </div>
+                  <div class="col-auto fz-14">
+                    <div id="the-count-50" class="the-count">
+                      <span id="current-50">0</span>
+                      <span id="maximum-50">/50</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="fz-14 mt-2 confirmed">Please use the title only for describing the type of the property and the location. You can put the rest of the information in its designated fields or in the description of the property.</div>
+            </div>
+            <div class="form-group">
+              <div class="d-flex flex-column-reverse">
+                <textarea type="text" class="form-control form-textarea form-textarea-125" placeholder="Explain the small details that matter for this property..." name="description250a" id="count-250a" maxlength="250"></textarea>
+                <div class="row row-1 mb-2 align-items-center">
+                  <div class="col">Property description<span class="text-red">*</span>
+                  </div>
+                  <div class="col-auto fz-14">
+                    <div id="the-count-250a" class="the-count">
+                      <span id="current-250a">0</span>
+                      <span id="maximum-250a">/250</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="fz-14 mt-2 confirmed">Go crazy in the description. You have 250 characters of SEO-optimized description to boost your auction and explain to potential bidders why they should buy this property. Great things to include here are illustrative qualities such as the scenery, or pragmatics such as how well connected or what infrastructure is available in, and around the property.</div>
+            </div>
+            <div class="row mb-3">
+              <div class="col-xl-7">
+                <div class="form-group">
+                  <div class="mb-2">Property type<span class="text-red">*</span></div>
+                  <select class="custom-select" name="select">
+                    <option selected="">Select</option>
+                    <option value="1">Select-1</option>
+                    <option value="2">Select-2</option>
+                    <option value="3">Select-3</option>
+                  </select>
+                  <div class="fz-14 mt-2 confirmed">Please select the property type.</div>
+                </div>
+              </div>
+              <div class="col-xl-5">
+                <div class="form-group">
+                  <div class="row row-1 mb-2 align-items-center">
+                    <div class="col">Property area<span class="text-red">*</span>
+                    </div>
+                    <div class="col-auto fz-14 text-gray-2">Numbers only</div>
+                  </div>
+                  <input type="text" class="form-control" placeholder="10 000" name="propertyarea">
+                  <div class="fz-14 mt-2 confirmed">Specify the property area in square meters.</div>
+                </div>
+              </div>
+            </div>
+            <div class="fz-32 font-weight-bold lh-12 mt-1 pb-4">Location</div>
+            <div class="form-group">
+              <div class="d-flex flex-column-reverse">
+                <textarea type="text" class="form-control form-textarea form-textarea-72" placeholder="Explain the small details that are important about this location..." name="description250b" id="count-250b" maxlength="250"></textarea>
+                <div class="row row-1 mb-2 align-items-center">
+                  <div class="col">Location description<span class="text-red">*</span>
+                  </div>
+                  <div class="col-auto fz-14">
+                    <div id="the-count-250b" class="the-count">
+                      <span id="current-250b">0</span>
+                      <span id="maximum-250b">/250</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="fz-14 mt-2 confirmed">Use the location description to provide extra awareness for the bidder. For some auctions’, the perceived value is highly dependent on the surrounding area.</div>
+            </div>
             <div class="row">
               <div class="col-xl-6">
                 <div class="form-group">
-                  <div class="mb-2">First name</div>
-                  <div class="position-relative">
-                    <input type="text" class="form-control form-control-blue" placeholder="Abdullah" name="firstname">
-                    <a href="#!" class="copy"></a>
+                  <div class="row row-1 mb-2 align-items-center">
+                    <div class="col">City or area<span class="text-red">*</span>
+                    </div>
                   </div>
+                  <input type="text" class="form-control" placeholder="Riyadh" name="city">
                 </div>
               </div>
               <div class="col-xl-6">
                 <div class="form-group">
-                  <div class="mb-2">Second name</div>
-                  <div class="position-relative">
-                    <input type="text" class="form-control form-control-blue" placeholder="Alghadouni" name="secondname">
-                    <a href="#!" class="copy"></a>
+                  <div class="row row-1 mb-2 align-items-center">
+                    <div class="col">Neighbourhood</div>
+                    <div class="col-auto fz-14 text-gray-2">If applicable</div>
                   </div>
+                  <input type="text" class="form-control" placeholder="Central district" name="neighbourhood">
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-xl-6">
                 <div class="form-group">
-                  <div class="mb-2">Third name</div>
-                  <div class="position-relative">
-                    <input type="text" class="form-control form-control-blue" placeholder="Abdullah" name="thirdname">
-                    <a href="#!" class="copy"></a>
+                  <div class="row row-1 mb-2 align-items-center">
+                    <div class="col">Building number<span class="text-red">*</span>
+                    </div>
+                    <div class="col-auto fz-14 text-gray-2">Numbers only</div>
                   </div>
+                  <input type="number" class="form-control" placeholder="10 000" name="buildingnumber">
                 </div>
               </div>
               <div class="col-xl-6">
                 <div class="form-group">
-                  <div class="mb-2">Family name</div>
-                  <div class="position-relative">
-                    <input type="text" class="form-control form-control-blue" placeholder="Alghadouni" name="familyname">
-                    <a href="#!" class="copy"></a>
+                  <div class="row row-1 mb-2 align-items-center">
+                    <div class="col">Zip code</div>
+                    <div class="col-auto fz-14 text-gray-2">If applicable</div>
                   </div>
+                  <input type="text" class="form-control" placeholder="10 000" name="zip">
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="mb-2">Phone number</div>
-                  <div class="position-relative">
-                    <input type="number" class="form-control form-control-blue" placeholder="+971 00 000 0900" name="phone">
-                    <a href="#!" class="copy"></a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-xl-6">
-                <div class="form-group">
-                  <div class="mb-2">Email</div>
-                  <div class="position-relative">
-                    <input type="email" class="form-control form-control-blue" placeholder="email@email.com" name="email">
-                    <a href="#!" class="copy"></a>
-                  </div>
-                </div>
-              </div>
+            <div class="form-group mt-2 mb-4">
+              <iframe class="bg-img-radius" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7249.004867243087!2d46.67411454250344!3d24.709625491769586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x37737eab160a212!2sKingdom%20Tower!5e0!3m2!1sru!2str!4v1621501421711!5m2!1sru!2str" width="100%" height="232" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <div class="fz-14 confirmed">Defining the address above will update the map. Drag the pin to fine-tune the exact location of the property.</div>
             </div>
+            <div class="fz-32 font-weight-bold lh-12 pt-2 pb-4">Price, terms, and availability</div>
+
+
           </form>
-          <h3 class="mb-3">Current bids on your auction</h3>
-          <div class="text-gray pb-3">
-            <span class="mr-2">12:05:31 - 21/03/2020</span>
-            <span class="text-black">A user from Riyadh (32.24.20.20) bid <span class="text-blue">SAR 1 400 000</span></span>
-          </div>
-          <div class="text-gray pb-3">
-            <span class="mr-2">12:05:31 - 21/03/2020</span>
-            <span class="text-black">A user from Riyadh (32.24.20.20) bid <span class="text-blue">SAR 1 400 000</span></span>
-          </div>
-          <div class="text-gray pb-3">
-            <span class="mr-2">12:05:31 - 21/03/2020</span>
-            <span class="text-black">A user from Riyadh (32.24.20.20) bid <span class="text-blue">SAR 1 400 000</span></span>
-          </div>
-          <div class="text-gray pb-3">
-            <span class="mr-2">12:05:31 - 21/03/2020</span>
-            <span class="text-black">A user from Riyadh (32.24.20.20) bid <span class="text-blue">SAR 1 400 000</span></span>
-          </div>
-          <div class="text-gray pb-3">
-            <span class="mr-2">12:05:31 - 21/03/2020</span>
-            <span class="text-black">A user from Riyadh (32.24.20.20) bid <span class="text-blue">SAR 1 400 000</span></span>
-          </div>
         </div>
-        <div class="col-md-8 col-lg-4">
-          <div class="card card-2 h-auto">
-            <div class="watch-container embed-responsive embed-responsive-4by3" style="background-image: url(../img/img11.png)">
+        <div class="col-lg-6 col-xl-5">
+          <div class="draft-block">
+            <div class="row row-1 align-items-center mb-2">
+              <div class="col-sm">
+                <div class="fz-32 font-weight-bold lh-12 text-black text-uppercase">DRAFT</div>
+              </div>
+              <div class="col-sm-auto">
+                <span class="d-inline-block bid-time">
+                  <span class="align-middle d-inline-block text-gray-3">Saved: </span>
+                  <span class="bid-text-blue font-weight-bold align-middle  d-inline-block">3m ago</span> 
+                </span>
+                <button class="btn btn-primary btn-sign btn-edit fz-14 py-1">Preview draft</button>
+              </div>
             </div>
-            <div class="card-block">
-              <div class="row row-1 mb-1">
-                <div class="col-sm text-gray-3">Ended 10/02/2021</div>
-                <div class="col-sm-auto text-gray">
-                  <div>Winning bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
+            <div class="row mb-3">
+              <div class="col-sm-6">
+                <div class="draft">
+                  <span class="circle align-middle"></span>
+                  <span class="text-draft ml-2 align-middle">Photos uploaded</span>
+                </div>
+                <div class="draft">
+                  <span class="circle align-middle"></span>
+                  <span class="text-draft ml-2 align-middle">Title and description</span>
                 </div>
               </div>
-              <h3>Property title</h3>
-              <p>The property description will include a seo-optimized sales copy for positioning the auction to users</p>
-              <div class="mt-auto">
-                <div class="row row-1 align-items-center">
-                  <div class="col-auto">
-                    <a href="#!" class="a-property"><img src="../img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
+              <div class="col-sm-6">
+                <div class="draft success">
+                  <span class="circle align-middle"></span>
+                  <span class="text-draft ml-2 align-middle">Location and address</span>
+                </div>
+                <div class="draft success">
+                  <span class="circle align-middle"></span>
+                  <span class="text-draft ml-2 align-middle">Pricing and availability</span>
+                </div>
+              </div>
+            </div>
+            <div class="card card-2 h-auto">
+              <div class="watch-container embed-responsive embed-responsive-4by3" style="background-image: url(../img/img11.png)">
+              </div>
+              <div class="card-block">
+                <div class="row row-1 mb-1">
+                  <div class="col-sm text-gray-3">Starts 23/05/2021</div>
+                  <div class="col-sm-auto text-gray">
+                    <div>Starting bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                   </div>
-                  <div class="col-auto">
-                    <a href="#!" class="a-property"><img src="../img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
-                  </div>
-                  <div class="col-auto">
-                    <a href="#!" class="a-property"><img src="../img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
-                  </div>
-                  <div class="col-auto">
-                    <a href="#!" class="a-property"><img src="../img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
-                  </div>
-                </div> 
+                </div>
+                <h3>Property title</h3>
+                <p>The property description will include a seo-optimized sales copy for positioning the auction to users</p>
+                <div class="mt-auto">
+                  <div class="row row-1 align-items-center">
+                    <div class="col-auto">
+                      <a href="#!" class="a-property"><img src="../img/property1.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property type</span></a>
+                    </div>
+                    <div class="col-auto">
+                      <a href="#!" class="a-property"><img src="../img/property2.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property size</span></a>
+                    </div>
+                    <div class="col-auto">
+                      <a href="#!" class="a-property"><img src="../img/property3.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Property address - neighbourhood, city</span></a>
+                    </div>
+                    <div class="col-auto">
+                      <a href="#!" class="a-property"><img src="../img/property4.svg" alt="" class="align-middle"><span class="pl-1 align-middle">Auctioneer company name and logo</span></a>
+                    </div>
+                  </div> 
+                </div>
               </div>
             </div>
           </div>
