--- a/auctioneer/auctioneer-all-auctions.html
+++ b/auctioneer/auctioneer-all-auctions.html
@@ -117,8 +117,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Starts 23/05/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Starts 23/05/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -189,8 +189,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Starts 23/05/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Starts 23/05/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -281,8 +281,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -353,8 +353,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -425,8 +425,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -497,8 +497,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -569,8 +569,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -641,8 +641,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -733,8 +733,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Starts 23/05/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Starts 23/05/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -805,8 +805,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Starts 23/05/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Starts 23/05/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -877,8 +877,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Starts 23/05/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Starts 23/05/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -969,8 +969,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Ended 10/02/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Ended 10/02/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -1041,8 +1041,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Ended 10/02/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Ended 10/02/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -1113,8 +1113,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">Ended 10/02/2021</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">Ended 10/02/2021</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
