--- a/guest/guest-auctions.html
+++ b/guest/guest-auctions.html
@@ -120,8 +120,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -192,8 +192,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -264,8 +264,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -336,8 +336,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -408,8 +408,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -480,8 +480,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -572,8 +572,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -644,8 +644,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -716,8 +716,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -808,8 +808,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -880,8 +880,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -952,8 +952,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
