--- a/bidder/bidder-auctions.html
+++ b/bidder/bidder-auctions.html
@@ -119,8 +119,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -191,8 +191,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -263,8 +263,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -335,8 +335,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -407,8 +407,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -479,8 +479,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -571,8 +571,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -643,8 +643,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -715,8 +715,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -807,8 +807,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -879,8 +879,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
@@ -951,8 +951,8 @@
             </div>
             <div class="card-block">
               <div class="row row-1 mb-1">
-                <div class="col">2d : 3h : 15m left</div>
-                <div class="col-auto">
+                <div class="col text-gray-3">2d : 3h : 15m left</div>
+                <div class="col-auto text-gray">
                   <div>Current bid: <span class="text-blue font-weight-bold">SR 1 500 000</span></div>
                 </div>
               </div>
