--- a/auctioneer/auctioneer-edit-auction-draft.html
+++ b/auctioneer/auctioneer-edit-auction-draft.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/node-waves/0.7.6/waves.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/e8bddc60e73c1ec2475f827be36e1957af72e2ea/build/css/bootstrap-datetimepicker.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -57,7 +58,7 @@
 
   <section class="section pt-5 mb-3 bg-white">
     <div class="container">
-      <div class="row row-3 justify-content-center">
+      <div class="row row-3 justify-content-centerr">
         <div class="col-lg-9 col-xl-7 mb-5 mb-xl-0">
           <a href="#!" class="see-all see-all-back">
             <img src="../img/arrow-left.svg" alt="" class="align-middle">
@@ -97,7 +98,7 @@
                       <img src="../img/upload.svg">
                       <span class="uploader-text">Upload</span>
                     </span>
-                    <img src="../img/placeholder-2.svg" alt="" class="image">
+                    <img src="../img/placeholder.svg" alt="" class="image">
                   </span>
                   <span class="delete-wrap">
                     <a href="#!" class="star">
@@ -120,7 +121,7 @@
                       <img src="../img/upload.svg">
                       <span class="uploader-text">Upload</span>
                     </span>
-                    <img src="../img/placeholder-2.svg" alt="" class="image">
+                    <img src="../img/placeholder.svg" alt="" class="image">
                   </span>
                   <span class="delete-wrap">
                     <a href="#!" class="star">
@@ -143,7 +144,7 @@
                       <img src="../img/upload.svg">
                       <span class="uploader-text">Upload</span>
                     </span>
-                    <img src="../img/placeholder-2.svg" alt="" class="image">
+                    <img src="../img/placeholder.svg" alt="" class="image">
                   </span>
                   <span class="delete-wrap">
                     <a href="#!" class="star">
@@ -166,7 +167,7 @@
                       <img src="../img/upload.svg">
                       <span class="uploader-text">Upload</span>
                     </span>
-                    <img src="../img/placeholder-2.svg" alt="" class="image">
+                    <img src="../img/placeholder.svg" alt="" class="image">
                   </span>
                   <span class="delete-wrap">
                     <a href="#!" class="star">
@@ -308,8 +309,8 @@
                 <div class="form-group">
                   <div class="mb-2">Auction start date<span class="text-red">*</span></div>
                   <div class="position-relative">
-                    <input type="text" class="form-control" placeholder="23 / 05 / 1990" name="startdate">
-                    <a href="#!" class="date"></a>
+                    <input type="text" class="form-control datepicker" placeholder="23 / 05 / 1990" name="startdate">
+                    <span class="date"></span>
                   </div>
                   <div class="fz-14 mt-2 confirmed">Auctions can start a minimum 24 hours from being listed, and a maximim of 30 days in advance.</div>
                 </div>
@@ -318,8 +319,8 @@
                 <div class="form-group">
                   <div class="mb-2">Auction start time<span class="text-red">*</span></div>
                   <div class="position-relative">
-                    <input type="text" class="form-control" placeholder="12:30 PM" name="starttime">
-                    <a href="#!" class="date time"></a>
+                    <input type="text" class="form-control timepicker" placeholder="12:30 PM" name="starttime">
+                    <span class="date time"></span>
                   </div>
                   <div class="fz-14 mt-2 confirmed">Usually a mid-day time slot is best for launching an auction on Asaas.</div>
                 </div>
@@ -330,8 +331,8 @@
                 <div class="form-group">
                   <div class="mb-2">Auction end date<span class="text-red">*</span></div>
                   <div class="position-relative">
-                    <input type="text" class="form-control" placeholder="23 / 05 / 1990" name="enddate">
-                    <a href="#!" class="date"></a>
+                    <input type="text" class="form-control datepicker" placeholder="23 / 05 / 1990" name="enddate">
+                    <span class="date"></span>
                   </div>
                   <div class="fz-14 mt-2 confirmed">Auctions can be live for a duration of 2 days to 21 days. The average recommended duration is 5 days.</div>
                 </div>
@@ -340,8 +341,8 @@
                 <div class="form-group">
                   <div class="mb-2">Auction end time<span class="text-red">*</span></div>
                   <div class="position-relative">
-                    <input type="text" class="form-control" placeholder="12:30 PM" name="endtime">
-                    <a href="#!" class="date time"></a>
+                    <input type="text" class="form-control timepicker" placeholder="12:30 PM" name="endtime">
+                    <span class="date time"></span>
                   </div>
                   <div class="fz-14 mt-2 confirmed">By default, auctions start and end within the same hour diapason.</div>
                 </div>
@@ -579,6 +580,8 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/node-waves/0.7.6/waves.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/common.js"></script>
 
 </body>
