--- a/auctioneer/auctioneer-edit-auction-draft-complete.html
+++ b/auctioneer/auctioneer-edit-auction-draft-complete.html
@@ -403,7 +403,7 @@
                   <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 btn-block d-sm-inline-block py-2">Drafts are automatically saved</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-3 mt-sm-0">
-                  <a href="#!" class="see-all see-all-2 fz-18">Preview auction as a bidder</a>
+                  <a href="#!" class="see-all see-all-2 fz-18">Preview and submit for approval</a>
                 </div>
               </div>
             </div>
@@ -420,16 +420,16 @@
                   <span class="align-middle d-inline-block text-gray-3">Saved: </span>
                   <span class="bid-text-blue font-weight-bold align-middle  d-inline-block">3m ago</span> 
                 </span>
-                <button class="btn btn-primary btn-sign btn-edit fz-14 py-1">Preview draft</button>
+                <button class="btn btn-primary btn-sign btn-edit fz-14 py-1">Preview and submit</button>
               </div>
             </div>
             <div class="row mb-3">
               <div class="col-sm-6">
-                <div class="draft">
+                <div class="draft success">
                   <span class="circle align-middle"></span>
                   <span class="text-draft ml-2 align-middle">Photos uploaded</span>
                 </div>
-                <div class="draft">
+                <div class="draft success">
                   <span class="circle align-middle"></span>
                   <span class="text-draft ml-2 align-middle">Title and description</span>
                 </div>
