--- a/auctioneer/auctioneer-edit-auction-rejected.html
+++ b/auctioneer/auctioneer-edit-auction-rejected.html
@@ -403,7 +403,7 @@
                   <button class="btn btn-primary btn-sign btn-edit ml-0 fz-18 btn-block d-sm-inline-block py-2">Drafts are automatically saved</button>
                 </div>
                 <div class="col-sm text-center text-sm-right mt-3 mt-sm-0">
-                  <a href="#!" class="see-all see-all-2 fz-18">Preview auction as a bidder</a>
+                  <a href="#!" class="see-all see-all-2 fz-18">Preview and resubmit for approval</a>
                 </div>
               </div>
             </div>
@@ -413,40 +413,15 @@
           <div class="draft-block">
             <div class="row row-1 align-items-center mb-2">
               <div class="col-sm">
-                <div class="fz-32 font-weight-bold lh-12 text-black text-uppercase">DRAFT</div>
+                <div class="fz-32 font-weight-bold lh-12 text-black text-uppercase">REJECTED</div>
               </div>
               <div class="col-sm-auto">
-                <span class="d-inline-block bid-time">
-                  <span class="align-middle d-inline-block text-gray-3">Saved: </span>
-                  <span class="bid-text-blue font-weight-bold align-middle  d-inline-block">3m ago</span> 
-                </span>
-                <button class="btn btn-primary btn-sign btn-edit fz-14 py-1">Preview draft</button>
+                <button class="btn btn-primary btn-sign btn-edit fz-14 py-1">Preview and resubmit</button>
               </div>
             </div>
-            <div class="row mb-3">
-              <div class="col-sm-6">
-                <div class="draft">
-                  <span class="circle align-middle"></span>
-                  <span class="text-draft ml-2 align-middle">Photos uploaded</span>
-                </div>
-                <div class="draft">
-                  <span class="circle align-middle"></span>
-                  <span class="text-draft ml-2 align-middle">Title and description</span>
-                </div>
-              </div>
-              <div class="col-sm-6">
-                <div class="draft success">
-                  <span class="circle align-middle"></span>
-                  <span class="text-draft ml-2 align-middle">Location and address</span>
-                </div>
-                <div class="draft success">
-                  <span class="circle align-middle"></span>
-                  <span class="text-draft ml-2 align-middle">Pricing and availability</span>
-                </div>
-              </div>
-            </div>
+            <div class="lh-12 mb-4">Please update your auction’s name to include less details. And try to upload high quality images.</div>
             <div class="card card-2 h-auto">
-              <div class="watch-container embed-responsive embed-responsive-4by3" style="background-image: url(../img/img11.png)">
+              <div class="watch-container embed-responsive embed-responsive-4by3" style="background-image: url(../img/img43.png)">
               </div>
               <div class="card-block">
                 <div class="row row-1 mb-1">
